# sycl-bench

./: CMakeLists.txt  README.md  runall.sh  script
build_cgeist/: 2DConvolution  2mm  3mm  CMakeCache.txt  Makefile  atax  bicg  cmake_install.cmake  covariance  gemm  gesummv  gramschmidt  matmulchain  mvt  output.csv  syr2k  syrk
build_clang/: 2DConvolution  2mm  3mm  atax  bicg  covariance  gemm  gesummv  gramschmidt  matmulchain  mvt  output.csv  syr2k  syrk
include/: common.h  time_metrics.h
pattern/: reduction.cpp  segmentedreduction.cpp
plot/: README.md  double-plot.py  parse-csv.py  plot-compact.py  plot-detailed.py
polybench/: 2DConvolution.cpp  2mm.cpp  3mm.cpp  atax.cpp  bicg.cpp  covariance.cpp  fdtd2d.cpp  gemm.cpp  gesummv.cpp  gramschmidt.cpp  mvt.cpp  syr2k.cpp  syrk.cpp
runtime/: dag_task_throughput_independent.cpp  dag_task_throughput_sequential.cpp
single-kernel/: nbody.cpp  scalar_prod.cpp
